syntax = "proto3";

package im;
option java_package = "com.lynch.im.protocol";
option java_outer_classname="AuthenticateResponseProto";

message AuthenticateResponse{
    int32 status =1;
    int32 errorCode = 2;
    string errorMessage = 3;

//    int32 clientVersion = 1;
//    int32 requestType = 2;
//    int64 sequence = 3;
//    string uid = 4;
//    string token = 5;
//    int64 timestamp = 6;
}
